@@ -1,7 +1,5 @@
 
 * other features (easy)
-** add scaling for dissimilarity : division by the norm (Frobenius), cosine
-scaling, divide by standard deviation of the distances, divide by the max(?)
 ** add ANOVA for dissimilarity in summary
 ** add ANOVA for superclasses
 ** init=pca
