@@ -57,10 +57,14 @@ initSOM(dimension=c(5,5), topo=c("square"),
   \code{obs} for the \code{relational} type.}
   \item{scaling}{The type of data pre-processing. For \code{numeric} SOM, 
   possibilities are \code{unitvar} (data are centered and scaled; this 
-  is the default value for a  \code{numeric} SOM) and \code{none} (no 
-  pre-processing; this is the only value allowed for a \code{relational} SOM), 
-  \code{center} (data are centered but not scaled). For \code{korresp} SOM, the 
-  only available value (and default) is \code{chi2}.}
+  is the default value for a \code{numeric} SOM), \code{none} (no 
+  pre-processing), and \code{center} (data are centered but not scaled).
+  For \code{korresp} SOM, the only available value is \code{chi2}.
+  For \code{relational} SOM, possibilities are \code{none} (no pre-processing, 
+  default value for \code{relational} SOM), \code{frobenius} (dissimilarity 
+  matrix is divided by its frobenius norm), \code{unitmax} (dissimilarity matrix
+  is divided by its maximum), \code{distunitvar} (dissimilarities are divided 
+  by their standard deviation), and \code{cosine}.}
   \item{radius.type}{The neighbourhood type. Default value is \code{"letremy"},
   which corresponds to the original implementation by Patrick Letremy.}
   \item{eps0}{The scaling value for the stochastic gradient descent step
